k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: demo
  annotations:
    kubernetes.io/change-cause: "${TIMESTAMP} Deployed commit id: ${COMMIT}"
spec:
  replicas: 6
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 30%
  minReadySeconds: 5
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - demo
                topologyKey: kubernetes.io/hostname
      containers:
        - name: demo
          image: 159364473423.dkr.ecr.eu-west-1.amazonaws.com/demo:${COMMIT}
          imagePullPolicy: 'IfNotPresent'
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 3
            failureThreshold: 10
            initialDelaySeconds: 2


---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
  labels:
    app: demo
spec:
  ports:
   - name: http
     port: 80
     targetPort: http
     protocol: TCP
  selector:
   app: demo

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo
  namespace: demo
spec:
  rules:
    - host: 'demo.matchiplay.app'
      http:
        paths:
          - backend:
              serviceName: demo
              servicePort: http
            path: /
